# ARAM-Mayhem-Database

./: .gitignore  AGENTS.md  ARAM-collector.spec  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  TODO.md  auto_train.py  build.bat  check_db.py  collect.py  lcu_collector.py  pyproject.toml  requirements.txt  start.bat  vercel.json
docs/: index.html
documents/: personal-data-audit.md
scripts/: __init__.py  anchor_synergy.py  build_tier_list.py  compare_combined.py  export_lr_weights.py  lcu_backfill.py  lcu_collector.py  lcu_dump.py  lcu_probe_endpoints.py  lcu_save_eog.py  pairwise_and_stack_solo.py  pick_advisor.py  probe_queues.py  probe_user.py  recommend_gui.py  sanity_tests.py  smoke_test.py  synergy_lift.py  tier_list.py  train_single_team.py  train_tier2.py
src/aram_nn/: data.py  eval.py  recommend.py  train.py
src/aram_nn/ingest/: cli.py  extract.py  riot_client.py  snowball.py
src/aram_nn/lcu/: __init__.py  client.py  snowball.py
